--- a/app/src/main/res/layout/source_layout.xml
+++ b/app/src/main/res/layout/source_layout.xml
@@ -18,17 +18,18 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/source_image"
             android:layout_weight="2"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         
 
         <TextView
+            android:layout_marginLeft="@dimen/_10sdp"
             android:id="@+id/source_name"
             android:layout_weight="8"
             android:textStyle="bold"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
